# repos

./: CMakeLists.txt  README.md  vcpkg.json
build-x86/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CamelotPad.slnx  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
camelotpad-core/: CMakeLists.txt
camelotpad-core/include/camelotpad/: CamelotPadApp.hpp  Types.hpp
camelotpad-core/include/camelotpad/actions/: ActionRouter.hpp
camelotpad-core/include/camelotpad/config/: ProfileManager.hpp
camelotpad-core/include/camelotpad/discovery/: ValueDiscovery.hpp
camelotpad-core/include/camelotpad/input/: XInputProcessor.hpp
camelotpad-core/include/camelotpad/integrations/: DaochookInterfaces.hpp
camelotpad-core/include/camelotpad/platform/: WinInputEmitter.hpp
camelotpad-core/include/camelotpad/render/: Dx9LuaUiBridge.hpp
camelotpad-core/src/: CamelotPadApp.cpp  DllMain.cpp
camelotpad-core/src/actions/: ActionRouter.cpp
camelotpad-core/src/config/: ProfileManager.cpp
camelotpad-core/src/discovery/: ValueDiscovery.cpp
camelotpad-core/src/input/: XInputProcessor.cpp
camelotpad-core/src/integrations/: DaochookInterfaces.cpp
camelotpad-core/src/platform/: WinInputEmitter.cpp
camelotpad-core/src/render/: Dx9LuaUiBridge.cpp
camelotpad-lua/ui/: main.lua
camelotpad-shared/: profile.schema.json  runtime.sample.json
docs/: daochook_research.md  install_guide.md  integration_notes.md  run_daoc_test.md  test_matrix.md  troubleshooting.md  values_registry.md
tools/: package_release.ps1  validate_profile.py
(+45 files in other folders)
